apps/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    # admin panel works fine with authelia-auth
    - match: Host(`vault.${DOMAIN}`) && PathPrefix(`/admin`)
      kind: Rule
      priority: 20
      middlewares:
        - name: frp-headers
          namespace: traefik
        - name: authelia-auth
          namespace: traefik
      services:
        - name: vaultwarden
          port: 80
          namespace: vaultwarden
    # browser extension and mobile clients don't like authelia-auth
    - match: Host(`vault.${DOMAIN}`)
      kind: Rule
      priority: 10
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: vaultwarden
          port: 80
          namespace: vaultwarden
